--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "hapi": "^13.0.0",
+    "inert": "^3.2.0",
     "makemehapi": "^5.0.0"
+  },
+  "scripts": {
+    "makemehapi": "./node_modules/.bin/makemehapi"
   }
 }
