--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "makemehapi-solutions",
   "version": "1.0.0",
   "dependencies": {
+    "handlebars": "^4.0.5",
     "hapi": "^13.0.0",
     "inert": "^3.2.0",
-    "makemehapi": "^5.0.0"
+    "makemehapi": "^5.0.0",
+    "vision": "^4.0.1"
   },
   "scripts": {
     "makemehapi": "./node_modules/.bin/makemehapi"
